# govflow-ai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: Dockerfile  README.md  pyproject.toml
backend/scripts/: smoke_uvicorn.py
backend/src/govflow_backend/: __init__.py  config_loader.py  config_models.py  exceptions.py  logging_setup.py  main.py  settings.py
backend/src/govflow_backend/agents/: __init__.py  builtin_tools.py  graph.py  loader.py  messages.py  nodes.py  observability.py  schema.py  state.py  tooling.py
backend/src/govflow_backend/api/: deps.py
backend/src/govflow_backend/cli/: ingest.py
backend/src/govflow_backend/core/: __init__.py  config.py  feature_flags.py  logging.py  openai_model.py  rate_limit.py  request_metrics.py  security.py
backend/src/govflow_backend/graph/: __init__.py  workflow.py
backend/src/govflow_backend/observability/: __init__.py  audit.py
backend/src/govflow_backend/rag/: __init__.py  chunking.py  qa.py  (+9 more)
backend/tests/: conftest.py  test_agents_api.py  test_agents_graph.py  test_agents_loader.py  test_agents_tooling.py  test_config_loader.py  test_core_config.py  test_core_feature_flags.py  test_feature_flags.py  test_graph_demo.py  test_guardrails_unit.py  test_health.py  test_openai_model.py  test_openapi_documentation.py  test_rag_api.py  test_rag_chroma_store.py  test_rag_chunking.py  test_rag_factories.py  test_rag_guardrails.py  test_rag_loaders.py  test_rag_retrieval.py  test_rag_yaml_loader.py  test_responsible_ai_loader.py  test_security_observability_api.py
(+80 files in other folders)
